--- a/API/templates/Fila_D.html
+++ b/API/templates/Fila_D.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DashBoard Temperatura</title>
-    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="{{url_for('static',filename='bootstrap.min.css')}}" rel="stylesheet" >
     <link href="{{url_for('static', filename='reset.css')}}" rel="stylesheet" >
                            
@@ -17,9 +17,9 @@
     <div class="row">        
         <div class="col-md-12">
             <header>
-            <!--<img src="https://www.tireland.ca/upload/tireland_icipneu/brandPages/brand-top-mark/desktop/continental-fr_CA.jpg
-            " alt="Logo" width="1540" height="120" class="d-inline-block align-text-top">-->
-             <img src="{{url_for('static',filename='head_D.png')}}" alt="Logo" width="1712" height="180" class="d-inline-block align-text-top">
+            <img src="https://www.valleytyres.co.nz/wp-content/uploads/2020/01/continental-banner.jpg
+            " alt="" width="1540" height="120" class="d-inline-block align-text-top">
+            <!--<img src="{{url_for('static',filename='head_D.png')}}" alt="" width="1712" height="180" class="d-inline-block align-text-top">-->
             </header>        
         </div> 
     </div>
@@ -49,91 +49,122 @@
         <main class="container-fluid">
 
             <div class="row row-cols-1 row-cols-md-6 text-center">
-                        <div class="col">
-                            <div class="card mb-4 rounded-3 shadow-sm">
-                                <div class="card-header py-3">
-                                    <h5 class="my-0 fw-normal">KM 6D</h5>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title pricing-card-title">{{Dash_KM1A_M1_Temp}}<small
-                                            class="text-body-secondary fw-light">Cº</small></h4>
-                                </div>
-                            </div>
+                <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h5 class="my-0 fw-normal">KM 6D</h5>
                         </div>
+                        <div class="card-body">
+                            <h4 class="card-title pricing-card-title">{{KM6D_Temperatura}}<small
+                                    class="text-body-secondary fw-light">Cº</small></h4>
+                        </div>
+                    </div>
+                </div>
+    
+               <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h5 class="my-0 fw-normal">PU 6D</h5>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title pricing-card-title">{{PU6D_Temperatura}}<small
+                                    class="text-body-secondary fw-light">Cº</small></h4>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h5 class="my-0 fw-normal">KM 7D</h5>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title pricing-card-title">{{KM7D_Temperatura}}<small
+                                    class="text-body-secondary fw-light">Cº</small></h4>
+                        </div>
+                    </div>
+                </div>
+    
+               <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h5 class="my-0 fw-normal">PU 7D</h5>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title pricing-card-title">{{PU7D_Temperatura}}<small
+                                    class="text-body-secondary fw-light">Cº</small></h4>
+                        </div>
+                    </div>
+               </div>
+    
+    
+               <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h5 class="my-0 fw-normal">KM 8D</h5>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title pricing-card-title">{{KM8D_Temperatura}}<small
+                                    class="text-body-secondary fw-light">Cº</small></h4>
+                        </div>
+                    </div>
+                </div>
+    
+               <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm">
+                        <div class="card-header py-3">
+                            <h5 class="my-0 fw-normal">PU 8D</h5>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title pricing-card-title">{{PU8D_Temperatura}}<small
+                                    class="text-body-secondary fw-light">Cº</small></h4>
+                        </div>
+                    </div>
+               </div>
 
                         <div class="col">
-                            <div class="card mb-4 rounded-3 shadow-sm">
-                                <div class="card-header py-3">
-                                    <h5 class="my-0 fw-normal">PU 6D</h5>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title pricing-card-title">{{Dash_PU1A_Atual_Temp}}<small
-                                            class="text-body-secondary fw-light">Cº</small></h4>
-                                </div>
-                            </div>
-                        </div>
-
-                         <div class="col">
-                            <div class="card mb-4 rounded-3 shadow-sm">
-                                <div class="card-header py-3">
-                                    <h5 class="my-0 fw-normal">KM 7D</h5>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title pricing-card-title">{{Dash_KM1A_M1_Temp}}<small
-                                            class="text-body-secondary fw-light">Cº</small></h4>
-                                </div>
-                            </div>
+                            
+                            
                         </div>
 
                         <div class="col">
-                            <div class="card mb-4 rounded-3 shadow-sm">
-                                <div class="card-header py-3">
-                                    <h5 class="my-0 fw-normal">PU 7D</h5>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title pricing-card-title">{{Dash_PU1A_Atual_Temp}}<small
-                                            class="text-body-secondary fw-light">Cº</small></h4>
-                                </div>
-                            </div>
+                            
+                            
                         </div>
 
                         <div class="col">
-                            <div class="card mb-4 rounded-3 shadow-sm">
-                                <div class="card-header py-3">
-                                    <h5 class="my-0 fw-normal">KM 8D</h5>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title pricing-card-title">{{Dash_KM1A_M1_Temp}}<small
-                                            class="text-body-secondary fw-light">Cº</small></h4>
-                                </div>
-                            </div>
+                            
+                            
                         </div>
 
-                       <div class="col">
-                            <div class="card mb-4 rounded-3 shadow-sm">
-                                <div class="card-header py-3">
-                                    <h5 class="my-0 fw-normal">PU 8D</h5>
-                                </div>
-                                <div class="card-body">
-                                    <h4 class="card-title pricing-card-title">{{Dash_PU1A_Atual_Temp}}<small
-                                            class="text-body-secondary fw-light">Cº</small></h4>
-                                </div>
-                            </div>
+                        <div class="col">
+                            
+                            
                         </div>
 
+                        <div class="col">
+                            
+                            
+                        </div>
                         
-                        <div class="col offset-sm-10">
-                            <div class="row align-items-center">
-                                <div class="card-body">
-                                    <a href="\">
-                                        <button type="button" class="btn btn-secondary btn-lg">HOME</button>
-                                    </a> 
-                                </div>                            
-                            </div>
-
-
-
-                        </div>
+                        
+ 
+                        <div class="row align-items-center">
+                             <div class="col">
+                                 <div class="card mb-4 rounded-3 shadow-sm">
+                                     <div class="card-header py-3">
+                                         <h5 class="my-0 fw-normal">RETORNAR HOME</h5>
+                                     </div>
+                                         <div class="card-body">
+                                             <a href="\">
+                                                 <button type="button" class="btn btn-secondary btn-lg">HOME</button>
+                                             </a>
+                                         </div>  
+                                     </div>
+                                     
+                                 </div>
+                             </div>
+                         </div>
 
                         
                         
@@ -163,7 +194,7 @@
     </script>
 
     <script src="/templates/assets/js/bootstrap.bundle.min.js"></script>
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
 
 
 </body>
