--- a/API/templates/Fila_B.html
+++ b/API/templates/Fila_B.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DashBoard Temperatura</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link href="{{url_for('static',filename='bootstrap.min.css')}}" rel="stylesheet" >
-    <link href="{{url_for('static', filename='reset.css')}}" rel="stylesheet" >
+    <!--<link href="{{url_for('static',filename='bootstrap.min.css')}}" rel="stylesheet" >
+    <link href="{{url_for('static', filename='reset.css')}}" rel="stylesheet" >-->
                            
 </head>
 
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-md-12">
             <header>
-            <img src="https://www.1010tires.com/images/tires/Continental/Hero/Continental_Banner.jpg" alt="Logo" width="1540" height="120" class="d-inline-block align-text-top">
+            <img src="https://www.1010tires.com/images/tires/Continental/Hero/Continental_Banner.jpg" alt="Logo" width="1700" height="180" class="d-inline-block align-text-top">
             <!--<img src="{{url_for('static',filename='head_B.png')}}" alt="Logo" width="1712" height="180" class="d-inline-block align-text-top">-->
             </header>        
         </div> 
@@ -296,7 +296,7 @@
         }, 5000)
     </script>
 
-    <script src="/templates/assets/js/bootstrap.bundle.min.js"></script>
+    <!--<script src="/templates/assets/js/bootstrap.bundle.min.js"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
     
 
