--- a/API/templates/Fila_C.html
+++ b/API/templates/Fila_C.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DashBoard Temperatura Dos Paineis Fila C</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link href="{{url_for('static',filename='bootstrap.min.css')}}" rel="stylesheet" >
-    <link href="{{url_for('static', filename='reset.css')}}" rel="stylesheet" >
+    <!--<link href="{{url_for('static',filename='bootstrap.min.css')}}" rel="stylesheet" >
+    <link href="{{url_for('static', filename='reset.css')}}" rel="stylesheet" >-->
                            
 </head>
 
@@ -17,7 +17,7 @@
     <div class="row">        
         <div class="col-md-12">
             <header>
-            <img src="https://www.continental-aftermarket.com/media/1027/3-1-header-continental-marken-overview.png" alt="Logo" width="1540" height="120" class="d-inline-block align-text-top">
+            <img src="https://www.continental-aftermarket.com/media/1027/3-1-header-continental-marken-overview.png" alt="Logo" width="1700" height="180" class="d-inline-block align-text-top">
             <!--<img src="{{url_for('static',filename='head_C.png')}}" alt="Logo" width="1712" height="180" class="d-inline-block align-text-top">-->
             </header>        
         </div> 
@@ -288,16 +288,16 @@
       </footer>
     </div>
 
-    <script>
-         setTimeout(() => {
+   <script>
+        setTimeout(() => {
             window.location.reload(true)
-        }, 5000)
+        }, 10000)
 
     </script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
-    <script src="/templates/assets/js/bootstrap.bundle.min.js"></script>
+    <!--<script src="/templates/assets/js/bootstrap.bundle.min.js"></script>-->
 
 </body>
 
