--- a/API/templates/Fila_D.html
+++ b/API/templates/Fila_D.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DashBoard Temperatura</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link href="{{url_for('static',filename='bootstrap.min.css')}}" rel="stylesheet" >
-    <link href="{{url_for('static', filename='reset.css')}}" rel="stylesheet" >
+    <!--<link href="{{url_for('static',filename='bootstrap.min.css')}}" rel="stylesheet" >-->
+    <!--<link href="{{url_for('static', filename='reset.css')}}" rel="stylesheet" >-->
                            
 </head>
 
@@ -18,7 +18,7 @@
         <div class="col-md-12">
             <header>
             <img src="https://www.valleytyres.co.nz/wp-content/uploads/2020/01/continental-banner.jpg
-            " alt="" width="1540" height="120" class="d-inline-block align-text-top">
+            " alt="" width="1700" height="180" class="d-inline-block align-text-top">
             <!--<img src="{{url_for('static',filename='head_D.png')}}" alt="" width="1712" height="180" class="d-inline-block align-text-top">-->
             </header>        
         </div> 
