--- a/API/templates/index.html
+++ b/API/templates/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DashBoard Temperatura Dos Paineis Fila A</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet" >
-    <link href="{{url_for('static', filename='reset.css')}}" rel="stylesheet" >
+    <!--<link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet" >
+    <link href="{{url_for('static', filename='reset.css')}}" rel="stylesheet" >-->
 </head>
 
 <body style="" >
@@ -15,29 +15,29 @@
     <div class="row">        
         <div class="col-md-12">
             <header>
-            <img src="https://raichu-uploads.s3.amazonaws.com/companypageconfiguration_b40fb37f-4031-44c4-96df-50c829c5ca69.png" alt="Logo" width="1540" height="120" class="d-inline-block align-text-top">
+            <img src="https://raichu-uploads.s3.amazonaws.com/companypageconfiguration_b40fb37f-4031-44c4-96df-50c829c5ca69.png" alt="Logo" width="1750" height="180" class="d-inline-block align-text-top">
             <!--<img src="{{url_for('static',filename='head_A.png')}}" alt="Logo" width="1712" height="180" class="d-inline-block align-text-top">-->
             </header>        
         </div> 
     </div>        
 
-    <div class="row">
+    <div class="row container">
         <div class="col-md-12">
             <div class="align-self-center">
-                <span class="fs-1">DashBoard Temperatura Dos Paineis Fila A</span>
+                <span class="fs-1">Continental DashBoard Monitoramento Temperatura Dos Paineis PLT </span>
             </div>
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                             <li class="nav-item">
-                                <h5><a class="nav-link text-warning" href="\Fila_B">FILA B</a></h5>
+                                <h5><a class="nav-link text-warning" href="\FILA_B">FILA B</a></h5>
                             </li>
                             <li class="nav-item">
-                                <h5><a class="nav-link text-warning" href="\Fila_C">FILA C</a></h5>
+                                <h5><a class="nav-link text-warning" href="\FILA_C">FILA C</a></h5>
                             </li>
                             <li class="nav-item">
-                                <h5><a class="nav-link text-warning" href="\Fila_D">FILA D</a></h5>
+                                <h5><a class="nav-link text-warning" href="\FILA_D">FILA D</a></h5>
                             </li>
                             </ul>
                         </div>
@@ -290,7 +290,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"crossorigin="anonymous"></script>
-    <script src="C:\Automation\Python\DevPython\Projetos\Python-Server-OPCUA\API\assets\js\bootstrap.bundle.min.js"></script>
+    <!--<script src="C:\Automation\Python\DevPython\Projetos\Python-Server-OPCUA\API\assets\js\bootstrap.bundle.min.js"></script>-->
 
 </body>
 
